updated check out

--- a/check-out.html
+++ b/check-out.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WalkaBooks</title>
 
     <!-- Meta Tags -->
     <meta charset="utf-8">
@@ -65,105 +62,95 @@
     <!--Naviagtion Ends-->
 
     <div class="container">
-
-        <div class="Billing Contact panel-heading mt-5">
+        <div class="billing mt-5">
             <h3>Payment & Billing Details</h3>
         </div>
         <hr>
         <!--SHIPPING METHOD-->
         <div class="container row">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h4>Billing Contact</h4>
-                </div>
-                <div class="panel-body">
-                    <div class="form-group row">
-                        <div class="col-md-3 col-xs-12 ">
-                            <strong>First Name:</strong>
-                            <input type="text" name="first_name" class="form-control" value="" />
-                        </div>
-                        <div class="span1"></div>
-                        <div class="col-md-3 col-xs-12 ">
-                            <strong>Last Name:</strong>
-                            <input type="text" name="last_name" class="form-control" value="" />
-                        </div>
+            <div class="billing contact">
+                <h4>Billing Contact</h4>
+                <div class="form-group row">
+                    <div class="col-md-6 col-xs-12 ">
+                        <strong>First Name:</strong>
+                        <input type="text" name="first_name" class="form-control" value="" />
                     </div>
-
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>Primary Phone Number:</strong></div>
-                        <div class="col-md-6"><input type="text" name="phone_number" class="form-control" value="" /></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>Alternate Phone Number:</strong></div>
-                        <div class="col-md-6"><input type="text" name="phone_number" class="form-control" value="" /></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>Email Address:</strong></div>
-                        <div class="col-md-6"><input type="text" name="email_address" class="form-control" value="" /></div>
+                    <div class="col-md-6 col-xs-12">
+                        <strong>Last Name:</strong>
+                        <input type="text" name="last_name" class="form-control" value="" />
                     </div>
                 </div>
 
-
-                <div class="panel-heading">
-                    <h4>Billing Address</h4>
+                <div class="form-group">
+                    <div class="col-md-12 col-xs-12"><strong>Primary Phone Number:</strong></div>
+                    <div class="col-md-12 col-xs-12"><input type="text" name="phone_number" class="form-control" value="" /></div>
                 </div>
-                <div class="panel-body">
-                    <div class="form-group row">
-                        <div class="col-md-3 col-xs-12 ">
-                            <strong>First Name:</strong>
-                            <input type="text" name="first_name" class="form-control" value="" />
-                        </div>
-                        <div class="span1"></div>
-                        <div class="col-md-3 col-xs-12 ">
-                            <strong>Last Name:</strong>
-                            <input type="text" name="last_name" class="form-control" value="" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>Address Line 1:</strong></div>
-                        <div class="col-md-6">
-                            <input type="text" name="address" class="form-control" value="" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>Address Line 2:</strong></div>
-                        <div class="col-md-6">
-                            <input type="text" name="address" class="form-control" value="" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-6"><strong>City:</strong></div>
-                        <div class="col-md-6">
-                            <input type="text" name="city" class="form-control" value="" />
-                        </div>
-                    </div>
-                    <div class="form-group row">
-
-
-                        <div class="col-md-2 col-xs-12">
-                            <input type="text" placeholder="Province" name="Province" class="form-control" value="" />
-                        </div>
-
-
-
-                        <div class="col-md-2 col-xs-12">
-                            <input type="text" placeholder="country" name="Country" class="form-control" value="" />
-                        </div>
-
-
-
-                        <div class="col-md-2 col-xs-12">
-                            <input type="text" placeholder="Postal code" name="Postal_code" class="form-control" value="" />
-                        </div>
-
-                    </div>
-
+                <div class="form-group">
+                    <div class="col-md-12 col-xs-12"><strong>Alternate Phone Number:</strong></div>
+                    <div class="col-md-12 col-xs-12"><input type="text" name="phone_number" class="form-control" value="" /></div>
                 </div>
-
-
-
-                <!----put second here-->
+                <div class="form-group">
+                    <div class="col-md-12 col-xs-12"><strong>Email Address:</strong></div>
+                    <div class="col-md-12 col-xs-12"><input type="text" name="email_address" class="form-control" value="" /></div>
+                </div>
             </div>
+
+            <div class="panel-body">
+                <h4>Billing Address</h4>
+                <br>
+                <div class="form-group row">
+                    <div class="col-md-3 col-xs-12 ">
+                        <strong>First Name:</strong>
+                        <input type="text" name="first_name" class="form-control" value="" />
+                    </div>
+                    <div class="span1"></div>
+                    <div class="col-md-3 col-xs-12 ">
+                        <strong>Last Name:</strong>
+                        <input type="text" name="last_name" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-6"><strong>Address Line 1:</strong></div>
+                    <div class="col-md-6">
+                        <input type="text" name="address" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-6"><strong>Address Line 2:</strong></div>
+                    <div class="col-md-6">
+                        <input type="text" name="address" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-6"><strong>City:</strong></div>
+                    <div class="col-md-6">
+                        <input type="text" name="city" class="form-control" value="" />
+                    </div>
+                </div>
+                <div class="form-group row">
+
+
+                    <div class="col-md-2 col-xs-12">
+                        <input type="text" placeholder="Province" name="Province" class="form-control" value="" />
+                    </div>
+
+
+
+                    <div class="col-md-2 col-xs-12">
+                        <input type="text" placeholder="country" name="Country" class="form-control" value="" />
+                    </div>
+
+
+
+                    <div class="col-md-2 col-xs-12">
+                        <input type="text" placeholder="Postal code" name="Postal_code" class="form-control" value="" />
+                    </div>
+
+                </div>
+
+            </div>
+            <!----put second here-->
+
 
             <!--SHIPPING METHOD END-->
             <div class="aside">
@@ -216,17 +203,17 @@
                             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                                 <select class="form-control" name="">
                                         <option value="">Year</option>
-                                        <option value="2015">2020</option>
-                                        <option value="2016">2021</option>
-                                        <option value="2017">2022</option>
-                                        <option value="2018">2023</option>
-                                        <option value="2019">2024</option>
-                                        <option value="2020">2025</option>
-                                        <option value="2021">2026</option>
-                                        <option value="2022">2027</option>
-                                        <option value="2023">2028</option>
-                                        <option value="2024">2029</option>
-                                        <option value="2025">2030</option>
+                                        <option value="2020">2020</option>
+                                        <option value="2021">2021</option>
+                                        <option value="2022">2022</option>
+                                        <option value="2023">2023</option>
+                                        <option value="2024">2024</option>
+                                        <option value="2025">2025</option>
+                                        <option value="2026">2026</option>
+                                        <option value="2027">2027</option>
+                                        <option value="2028">2028</option>
+                                        <option value="2029">2029</option>
+                                        <option value="2030">2030</option>
                                 </select>
                             </div>
                         </div>
