--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 <body>
 
     <!-- Top Navigation Menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -364,17 +364,17 @@
                         <div class="pt-4">
                             <h5 class="mb-4">Expected shipping delivery</h5>
                             <!-- Temporary Code to test -->
-                            <input type="text" id="cart1" size ="12" value="">
+                            <input type="text" id="cart1" size="12" value="">
                             <br>
-                            <input type="text" id="cart2" size ="12" value="">
+                            <input type="text" id="cart2" size="12" value="">
                             <br>
-                            <input type="text" id="cart3" size ="12" value="">
+                            <input type="text" id="cart3" size="12" value="">
                             <br>
-                            <input type="text" id="cart4" size ="12" value="">
+                            <input type="text" id="cart4" size="12" value="">
                             <br>
-                            <input type="text" id="cart5" size ="12" value="">
+                            <input type="text" id="cart5" size="12" value="">
                             <br>
-                            <input type="text" id="cart6" size ="12" value="">
+                            <input type="text" id="cart6" size="12" value="">
                             <p class="mb-0"> Thu., 12.03. - Mon., 16.03.</p>
                         </div>
                     </div>
@@ -528,4 +528,5 @@
 
     <script src="js/script.js" async defer></script>
 </body>
+
 </html>
