--- a/registration.html
+++ b/registration.html
@@ -18,16 +18,10 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy"
-        >You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.</p
-      >
-    <![endif]-->
 
     <!-- Top Navigation Menu -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,28 +55,21 @@
     </nav>
 
     <!--Container for Registration & Log In-->
-    <div class="d-flex m-5 p-5">
+    <div class="container row ml-auto mr-auto">
         <!--Register form-->
         <!---------------------------------------------------------------------------------------------->
-        <div class="container-fluid m-10 pt-5 w-50">
+        <div class="col-md-6 col-sm-12">
             <h2 class="font-weight-bold">Register</h2>
-            
+
             <form class="p-top-2" action="" name="registration">
                 <div class="form-group row">
-                    <label for="inputFirstName" class="col-sm-2 col-form-label">First Name</label
-            >
-            <div class="col-sm-10">
-              <input
-                type="text"
-                class="form-control"
-                id="inputFirstName"
-                placeholder="Enter your First Name"
-              />
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="inputLastName" class="col-sm-2 col-form-label"
-              >Last Name</label
+                    <label for="inputFirstName" class="col-md-4 col-sm-12  col-form-label">First Name</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" id="inputFirstName" placeholder="Enter your First Name" />
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputLastName" class="col-sm-2 col-form-label">Last Name</label
             >
             <div class="col-sm-10">
               <input
@@ -158,9 +145,9 @@
       <!---------------------------------------------------------------------------------------------->
 
       <div
-        class="d-flex flex-column container-fluid m-10 pt-5 justify-content-center w-50"
+        class="aside col-md-6 col-sm-12 py-5"
       >
-        <div>
+        <div class = "login-form py-5">
           <h2 class="font-weight-bold">Log In</h2>
           <form>
             <div class="form-group row">
@@ -169,8 +156,8 @@
               >
               <div class="col-sm-10">
                 <input
-                  type="password"
-                  class="form-control w-50"
+                  type="text"
+                  class="form-control"
                   id="inputUser"
                   placeholder="Enter your Username"
                 />
