updated about us page

--- a/check-out.html
+++ b/check-out.html
@@ -33,16 +33,16 @@
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home
-                    <span class="sr-only">(current)</span> <!---Check-->
-                    </a>
-                    </li>
                     <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home
+                    <span class="sr-only">(current)</span>
+                  </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="books.html">Books</a>
                     </li>
                     <li class="nav-item">
@@ -52,15 +52,19 @@
                         <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="registration.html"><i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
+                        <a class="nav-link" href="registration.html">
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
-                    </li>
-                </ul>
+                        <a class="nav-link" href="cart.html">
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
-        </div>
-    </nav>
+          </div>
+        </nav>
     <!--Naviagtion Ends-->
 
 
@@ -350,8 +354,8 @@
             <div class="social-footer">
                 <h5>Follow us</h5>
                 <a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
 
             </div>
             <!--End of the Third Footer Column-->
@@ -381,17 +385,17 @@
                 <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> |<a href="credits.html">Photo Credits</a></p>
         </div>
         <!-- End of Copyright -->
-    </footer>
-    <!-- End of Footer -->
+        </footer>
+        <!-- End of Footer -->
 
-    <script src="js/script.js" async defer></script>
-    <script>
-        $(document).ready(function() {
-            $("button").click(function() {
-                location.reload(true);
+        <script src="js/script.js" async defer></script>
+        <script>
+            $(document).ready(function() {
+                $("button").click(function() {
+                    location.reload(true);
+                });
             });
-        });
-    </script>
+        </script>
 
 </body>
 
