--- a/contact-us.html
+++ b/contact-us.html
@@ -26,17 +26,10 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy"
-        >You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.</p
-      >
-    <![endif]-->
-
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">WALKABOOKS</a>
+            <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,7 +51,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">
-                            <i class="fa fa-user-circle" style="font-size: 32px"></i>Log In
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
                         </a>
                     </li>
                     <li class="nav-item">
