--- a/credits.html
+++ b/credits.html
@@ -29,23 +29,19 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home
                     <span class="sr-only">(current)</span>
-                    </a>
+                  </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="books.html">Books</a>
@@ -58,16 +54,18 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">
-                            <i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">
-                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
-                    </li>
-                </ul>
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
-        </div>
-    </nav>
+          </div>
+        </nav>
 
     <br/>
     <!-- Page Content -->
@@ -153,8 +151,8 @@
             <div class="social-footer">
                 <h5>Follow us</h5>
                 <a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
 
             </div>
             <!--End of the Third Footer Column-->
