--- a/about-us.html
+++ b/about-us.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+
+<html lang="en">
 
 <head>
     <!-- Meta Tags -->
@@ -29,73 +26,59 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home
                     <span class="sr-only">(current)</span>
-                    </a>
+                  </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="books.html">Books</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about-us.html">About Us</a>
+                        <a class="nav-link active" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">
-                            <i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="cart.html">
-                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
-                    </li>
-                </ul>
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                  ></a>
+                </li>
+              </ul>
             </div>
-        </div>
-    </nav>
+          </div>
+        </nav>
+        <!--Naviagtion Ends-->
 
     <!-- Page Content -->
     <div class="container">
-        <!-- <div class="search-bar">
-                <form class="form-inline">
-                    <div> 
-                        <h5>Search Books</h5> 
-                    </div>
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text" id="basic-addon1">Go!</span>
-                        </div>
-                    </div>
-                </form>
-            </div> -->
-        <!--End of Search Bar-->
-
+        
         <!-- Banner -->
-        <div class="banner">
-            <img src="images/banner.jpg">
+        <div class="banner-wrap col-md-12 col-sm-12">
+            <img src="images/banner.jpg" class="rounded w-100" alt="Book banner">
         </div>
 
         <br/>
-
+        <h2>About Us</h2>
+        <br>
         <div class="row">
-            <div class="col-md-8">
-                <h2>About Us</h2>
+            <div class="col-md-8 col-sm-12">
+                
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
 
                 <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -141,8 +124,8 @@
             <div class="social-footer">
                 <h5>Follow us</h5>
                 <a href="#"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
-                <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                        <a href="#"><i class="fa fa-twitter-square" style="font-size:30px"></i></a>
 
             </div>
             <!--End of the Third Footer Column-->
@@ -171,10 +154,10 @@
                 <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> | <a href="#"> Site Map </a> | <a href="credits.html">Photo Credits</a></p>
         </div>
         <!-- End of Copyright -->
-    </footer>
-    <!-- End of Footer -->
+        </footer>
+        <!-- End of Footer -->
 
-    <script src="js/script.js" async defer></script>
+        <script src="js/script.js" async defer></script>
 </body>
 
 </html>
