--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <--<![endif]-->
 
 <html lang="en">
 
@@ -10,10 +6,11 @@
     <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>WALKABOOKS</title>
+
     <!--Customized CSS Styling-->
     <link href="css/main.css" rel="stylesheet" />
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
@@ -27,12 +24,6 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy"
-        >You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.</p
-      >
-    <![endif]-->
 
     <!-- Top Navigation Menu -->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -59,7 +50,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="registration.html">
-                            <i class="fa fa-user-circle" style="font-size: 32px"></i>Log In
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
                         </a>
                     </li>
                     <li class="nav-item">
