--- a/registration.html
+++ b/registration.html
@@ -20,19 +20,18 @@
 <body>
 
     <!-- Top Navigation Menu -->
-
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="index.html">WALKABOOKS</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
-              </a>
+                  <span class="sr-only">(current)</span>
+                </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="books.html">Books</a>
@@ -43,16 +42,20 @@
                     <li class="nav-item">
                         <a class="nav-link" href="contact-us.html">Contact Us</a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="registration.html"><i class="fa fa-user-circle" style="font-size: 32px"></i>Log In</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registration.html">
+                            <i class="fa fa-user-circle" style="font-size: 32px"></i>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cart.html"><i class="fa fa-shopping-cart" style="font-size: 32px"></i></a>
-                    </li>
-                </ul>
-            </div>
+                        <a class="nav-link" href="cart.html">
+                            <i class="fa fa-shopping-cart" style="font-size: 32px"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <!--Container for Registration & Log In-->
     <div class="container row ml-auto mr-auto">
@@ -231,11 +234,9 @@
             <h5>Contact Us</h5>
             <li
               ><a href="#"
-                ><i class="fa fa-envelope" style="font-size: 30px"></i></a
-            ></li>
-            <li
-              ><a href="#"
-                ><i class="fa fa-phone" style="font-size: 30px"></i></a
+                ><i class="fa fa-envelope" style="font-size: 30px"></i></a>
+                    </li>
+                    <li><a href="#"><i class="fa fa-phone" style="font-size: 30px"></i></a
             ></li>
             <li
               ><a href="#"
@@ -264,20 +265,21 @@
       <div class="copyright">
           <p class="m-0 text-center text-white">
               Copyright &copy; <a href="index.html">WalkaBooks 2020</a> <br />
-              <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
-              <a href="#"> Site Map |<a href="credits.html">Photo Credits</a> 
-          </p>
-      </div>
-      <!-- End of Copyright -->
-    </footer>
-    <!-- End of Footer -->
-        <!--jQuery, Popper.js, and Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
-        <script src="js/form-validation.js"></script>
-        <script src="js/script.js" async defer></script> 
-    </body
-></html>
+                        <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policy </a> |
+                        <a href="#"> Site Map |<a href="credits.html">Photo Credits</a>
+                        </p>
+            </div>
+            <!-- End of Copyright -->
+            </footer>
+            <!-- End of Footer -->
+            <!--jQuery, Popper.js, and Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js"></script>
+            <script src="js/form-validation.js"></script>
+            <script src="js/script.js" async defer></script>
+</body>
+
+</html>
