edited, updated and added content to book page

--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,7 @@
     <div class="container">
         
         <!-- Banner -->
-        <div class="banner-wrap col-md-12 col-sm-12">
+        <div class="banner col-md-12 col-sm-12 padding-0px">
             <img src="images/banner.jpg" class="rounded w-100" alt="Book banner">
         </div>
 
