Updated books, cart, chec-out and contact us

--- a/books.html
+++ b/books.html
@@ -63,7 +63,7 @@
 
     <main role="main" class="container">
       <!-- Banner -->
-      <div class="banner-wrap col-md-12 col-sm-12">
+      <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0 pt-10">
         <img src="images/banner.jpg" class="rounded w-100" alt="Book banner">
     </div>
 
