updated stlying on all pages with added banners

--- a/about-us.html
+++ b/about-us.html
@@ -69,9 +69,9 @@
     <div class="container">
         
         <!-- Banner -->
-        <div class="banner col-md-12 col-sm-12 padding-0px">
+        <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
             <img src="images/banner.jpg" class="rounded w-100" alt="Book banner">
-        </div>
+           </div>
 
         <br/>
         <h2>About Us</h2>
