--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
 
     <!-- Page Content -->
     <div class="container">
+      <!-- Banner -->
+      <div class="banner-wrap col-md-12 col-sm-12 pl-0 pr-0">
+        <img src="images/banner.jpg" class="rounded w-100" alt="Book banner"> 
+      </div>
       <!-- Jumbotron Header -->
-      <header class="jumbotron">
-        <div class="banner">
-          <img src="images/banner.jpg" alt="banner" />
+      <header class="jumbotron" style="height:100px;">
+        <div class="container">    
+        <h2 class="display-5 text-center">Shape Your Ideas!</h2>
+        <p class="lead text-center"
+          >Your one-stop shop of full-stack development resources</p>
         </div>
-        <h1 class="display-3">Shape Your Ideas!</h1>
-        <p class="lead"
-          >Your one-stop shop of full-stack development resources</p
-        >
-        <!---<a href="#" class="btn btn-primary btn-lg"></a>--->
       </header>
 
       <div class="search-bar">
@@ -108,13 +109,13 @@
           <div class="card h-100">
             <img
               class="card-img-top"
-              src="images/Database_Development_For_Dummies.webp"
+              src="images/Database_Development_For_Dummies.jpg"
               alt="Database Development For Dummies"
             />
             <div class="card-body">
               <h4 class="card-title">Database Development For Dummies</h4>
               <p class="card-text"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p
+                >Step-by-step, everything you need to know about databases</p
               >
             </div>
             <div class="card-footer">
@@ -148,7 +149,7 @@
           <div class="card h-100">
             <img
               class="card-img-top"
-              src="images/Front_End_Development.webp"
+              src="images/Front_End_Development.jpg"
               alt="Front End Development"
             />
             <div class="card-body">
