added cart count

--- a/books.html
+++ b/books.html
@@ -94,8 +94,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cart.html">
-                <i class="fa fa-shopping-cart" style="font-size: 32px"></i
-              ></a>
+                <i class="fa fa-shopping-cart" style="font-size: 32px"></i>
+                <span id="cart-icon-count">0</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -207,14 +208,6 @@
                     class="btn btn-primary"
                     >Add to Cart</a
                   >
-                  <!-- Remove code below after test -->
-                  <!-- <a
-                    href="#!"
-                    type="button"
-                    id="add-btn-1"
-                    class="btn btn-danger card-link-secondary small text-uppercase mr-3"
-                    ><i class="fas fa-trash-alt mr-1"></i> Remove item
-                  </a> -->
                 </div>
               </div>
               <div class="card">
