--- a/cart.html
+++ b/cart.html
@@ -364,9 +364,9 @@
                         <div class="pt-4">
                             <h5 class="mb-4">Expected shipping delivery</h5>
                             <!-- Temporary Code to test -->
-                            <input type="text" id="cart1" size ="12" value="">
+                            <input type="text" id="cart1" size ="30" value="">
                             <br>
-                            <input type="text" id="cart2" size ="12" value="">
+                            <!-- <input type="text" id="cart2" size ="12" value="">
                             <br>
                             <input type="text" id="cart3" size ="12" value="">
                             <br>
@@ -374,7 +374,7 @@
                             <br>
                             <input type="text" id="cart5" size ="12" value="">
                             <br>
-                            <input type="text" id="cart6" size ="12" value="">
+                            <input type="text" id="cart6" size ="12" value=""> -->
                             <p class="mb-0"> Thu., 12.03. - Mon., 16.03.</p>
                         </div>
                     </div>
