--- a/books.html
+++ b/books.html
@@ -83,8 +83,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="cart.html">
-                <i class="fa fa-shopping-cart" style="font-size: 32px"></i
-              ></a>
+                <i class="fa fa-shopping-cart" style="font-size: 32px"></i>
+                <span id="cart-icon-count">0</span>
+              </a>
             </li>
           </ul>
         </div>
