updated about us and home page

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="card-body">
               <h4 class="card-title">Front End Developer</h4>
               <p class="card-text"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p
+                >This book will make you the principal Front End Developer domain leader</p
               >
             </div>
             <div class="card-footer">
@@ -155,7 +155,7 @@
             <div class="card-body">
               <h4 class="card-title">Front End Development</h4>
               <p class="card-text"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p
+                >The professional's guide to fast, responsive web development.</p
               >
             </div>
             <div class="card-footer">
@@ -175,7 +175,7 @@
             <div class="card-body">
               <h4 class="card-title">Professional Front End Architecture</h4>
               <p class="card-text"
-                >Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p
+                >Offers a curated list of foundational principles selected explicitly for front-end architecture.</p
               >
             </div>
             <div class="card-footer">
